--- a/templates/delete_category.html
+++ b/templates/delete_category.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h1>Are you sure you want to delete {{category.name}}</h1>
 
 <form action="{{url_for('deleteCategory',category_id=category.id)}}" method='POST'>
@@ -14,6 +10,4 @@
 <input type='submit' value='Delete' > <br>
 
 </form>
-
-
-</body>
+{% endblock %}
