--- a/templates/new_category.html
+++ b/templates/new_category.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <h1> New Category </h1>
 
@@ -19,4 +15,4 @@
 </form>
 
 
-</body>
+{% endblock %}
