--- a/templates/new_resource.html
+++ b/templates/new_resource.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 
 <h1>Add a New Bookmark Resource</h1>
@@ -17,4 +13,4 @@
 	<input type='submit' value="Add Bookmark">
 </form>
 
-</body>
+{% endblock %}
