--- a/templates/delete_resource.html
+++ b/templates/delete_resource.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h1>Are you sure you want to delete {{resource.name}}</h1>
 
 <form action="{{url_for('deleteResource',category_id=category_id, resource_id=resource_id)}}" method='POST'>
@@ -17,4 +13,4 @@
 </form>
 
 
-</body>
+{% endblock %}
