--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <h1> Edit Category </h1>
 
@@ -19,5 +15,4 @@
 <input type='submit' value='Edit'>
 </form>
 
-
-</body>
+{% endblock %}
