--- a/templates/edit_notes.html
+++ b/templates/edit_notes.html
@@ -1,9 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-
-	</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <h1> Edit Notes </h1>
 
@@ -17,4 +13,4 @@
 </form>
 
 
-</body>
+{% endblock %}
