--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,16 @@
-{% extends "base.html" %}
-{% block content %}
+
+<!DOCTYPE HTML>
+<html>
+ <head>
+    <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+   </script>
+   <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
+ <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+</head>
+
+<body>
   <!-- GOOGLE PLUS SIGN IN-->
   <div id="signinButton">
   	<span class="g-signin"
@@ -108,4 +119,4 @@
 
 
 
-{% endblock %}
+</body>
