--- a/templates/bookmark_categories_base.html
+++ b/templates/bookmark_categories_base.html
@@ -46,7 +46,7 @@
 </section>
 
 <section class="col-md-3">
-	<div class="flash-message" style="text-align:right;">
+	<div class="flash-message" >
 		<!--MESSAGE FLASHING EXAMPLE -->
 		{% with messages = get_flashed_messages() %}
 		{% if messages %}
